--- a/footer.html
+++ b/footer.html
@@ -4,6 +4,7 @@
           <h4>Support</h4>
           <ul class="ul-inlisted">
                <li href="/contact">Contact</li>
+               <li href="/help-center/">Help center</li>
           </ul>
      </div>
      <div class="center">
@@ -18,6 +19,8 @@
           <h4>Developers</h4>
           <ul class="ul-inlisted">
                <li href="/api/developers/docs/">API</li>
+               <li href="/api/developers/docs/node.js">Node.JS package</li>
+               <li href="//github.com/TymianekPL/Tymianek.net">Github page</li>
           </ul>
      </div>
 </footer>
