--- a/footer.html
+++ b/footer.html
@@ -20,6 +20,7 @@
           <ul class="ul-inlisted">
                <li href="/api/developers/docs/">API</li>
                <li href="/api/developers/docs/node.js">Node.JS package</li>
+               <li href="/Tools">Tools library</li>
                <li href="//github.com/TymianekPL/Tymianek.net">Github page</li>
           </ul>
      </div>
